--- a/res/layout/show_beacon.xml
+++ b/res/layout/show_beacon.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:id="@+id/bts_layout"
+            android:layout_alignParentBottom="true"
+            android:layout_height="50dp">
+        <Button
+                android:id="@+id/bt_upload"
+                android:layout_weight="1"
+                android:text="上传"
+                android:onClick="onButtonClicked"
+                android:textColor="#ffffff"
+                android:background="@drawable/backcolor_norock"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                />
+
+    </LinearLayout>
     <ListView
             android:id="@+id/beacon_list_view"
             android:scrollbars="vertical"
+            android:layout_above="@id/bts_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
-</LinearLayout>
+</RelativeLayout>
