--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -13,12 +13,16 @@
     <PreferenceCategory android:title="默认值配置">
         <ListPreference
                 android:key="beacon_sumury"
-                android:defaultValue=""
+                android:defaultValue="商场"
                 android:title="区域选择"
                 android:summary="选择beacon默认所在区域"
                 android:entries="@array/beacon_sumury"
                 android:entryValues="@array/beacon_sumury"
                 />
+    </PreferenceCategory>
+    <PreferenceCategory
+            android:title="刷新间隔设置，无必要不推荐修改"
+            >
         <EditTextPreference
                 android:key="beacon_scan_period"
                 android:defaultValue="1000"
