--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -13,7 +13,7 @@
     <PreferenceCategory android:title="默认值配置">
         <ListPreference
                 android:key="beacon_sumury"
-                android:defaultValue="商场"
+                android:defaultValue="商业Mall"
                 android:title="区域选择"
                 android:summary="选择beacon默认所在区域"
                 android:entries="@array/beacon_sumury"
