--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -3,9 +3,9 @@
     <PreferenceCategory android:title="功能配置">
         <ListPreference
                 android:key="beacon_location"
-                android:defaultValue="local"
+                android:defaultValue="gps"
                 android:title="定位类型"
-                android:summary="选择定位类型，GPS(百度)或室内点选,默认室内点选。"
+                android:summary="选择定位类型，GPS(百度)或室内点选,默认GPS。"
                 android:entries="@array/beacon_location"
                 android:entryValues="@array/beacon_location_value"
                 android:dialogTitle="选择定位类型" />
@@ -21,8 +21,7 @@
                 />
     </PreferenceCategory>
     <PreferenceCategory
-            android:title="刷新间隔设置，无必要不推荐修改"
-            >
+            android:title="刷新间隔设置，无必要不推荐修改">
         <EditTextPreference
                 android:key="beacon_scan_period"
                 android:defaultValue="1000"
@@ -42,4 +41,7 @@
                 android:summary="超过这个时间未检测到Beacon时认为Beacon离开，单位毫秒"
                 />
     </PreferenceCategory>
+    <PreferenceCategory
+            android:title="当前版本：V1.0"
+            />
 </PreferenceScreen>
