--- a/res/layout/login_activity.xml
+++ b/res/layout/login_activity.xml
@@ -44,7 +44,7 @@
             android:layout_below="@id/bt_login"
             android:layout_alignStart="@id/bt_login"
             android:textColor="#ff7d899d"
-            android:text="服务器地址配置"
+            android:text=""
             android:clickable="true"
             android:layout_marginTop="20dp"
             android:onClick="onServerChange"
