--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -42,6 +42,6 @@
                 />
     </PreferenceCategory>
     <PreferenceCategory
-            android:title="当前版本：V1.0"
+            android:title="当前版本：V1.1 \n增加GPS定位模式在百度地图显示Beacon位置"
             />
 </PreferenceScreen>
